feat: Update swagger document
